--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,7 @@
+body { 
+    background-color: bisque; 
+    } 
+
 h1 {
     margin-top: 40px;
     text-align: center;
@@ -63,4 +67,11 @@ img {
 
 .pc {
 	color: #2d0095;
+}
+
+.textbox {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 45px;
+    font-size: 35px;
+    text-align: center;
 }
